--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					<div class="col">
 						<div class="header_content d-flex flex-row align-items-center justify-content-start trans_400">
 							<a href="#">
-								<div class="logo d-flex flex-row align-items-center justify-content-start"><img
-										src="images/fitgirls-icon.png" alt="">
-									<div>Fit<span>Girls</span></div>
+								<div class="logo d-flex flex-row align-items-center justify-content-start"><img style="width: 200px;"
+										src="images/fitgirls-logo-bg.png" alt="">
+									<!-- <div>Fit<span>Girls</span></div> -->
 								</div>
 							</a>
 							<nav class="main_nav">
@@ -107,7 +107,7 @@
 												class="video_icon d-flex flex-column align-items-center justify-content-center">
 												<i class="fa fa-play" aria-hidden="true"></i>
 											</div>
-											<span class="video_text">Watch Our Youtube</span>
+											<span class="video_text">FitGirls</span>
 										</div>
 									</a>
 								</div>
@@ -186,8 +186,8 @@
 					<div class="col-lg-6">
 						<div class="about_content">
 							<div class="section_title_container">
-								<div class="section_subtitle">welcome to fitgirls</div>
-								<div class="section_title">About <span>Fitgirls</span></div>
+								<div class="section_subtitle">welcome to FitGirls</div>
+								<div class="section_title">About <span>FitGirls</span></div>
 							</div>
 							<div class="text_highlight">Online Fitness Platform For Ladies.</div>
 							<div class="about_text">
@@ -206,7 +206,7 @@
 				<div class="container fill_height">
 					<div class="row fill_height">
 						<div class="col-lg-6 offset-lg-6 fill_height">
-							<div class="about_image"><img src="images/a1.png" alt=""></div>
+							<div class="about_image"><img width="750px" src="images/a11.png" alt=""></div>
 						</div>
 					</div>
 				</div>
@@ -218,7 +218,7 @@
 		<div class="testimonials">
 			<div class="parallax_background parallax-window" data-parallax="scroll"
 				data-image-src="images/testimonials.jpg" data-speed="0.8"></div>
-			<div class="container">
+			<!-- <div class="container">
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="section_title_container">
@@ -226,7 +226,6 @@
 							<div class="section_title">Testimonials</div>
 						</div>
 
-						<!-- Testimonial -->
 						<div class="test test_1 d-flex flex-row align-items-start justify-content-start">
 							<div>
 								<div class="test_image"><img src="images/test_1.jpg" alt=""></div>
@@ -246,7 +245,6 @@
 					</div>
 					<div class="col-lg-6">
 
-						<!-- Testimonial -->
 						<div class="test d-flex flex-row align-items-start justify-content-start">
 							<div>
 								<div class="test_image"><img src="images/test_2.jpg" alt=""></div>
@@ -264,7 +262,6 @@
 							</div>
 						</div>
 
-						<!-- Testimonial -->
 						<div class="test d-flex flex-row align-items-start justify-content-start">
 							<div>
 								<div class="test_image"><img src="images/test_3.jpg" alt=""></div>
@@ -289,7 +286,7 @@
 						<div class="button test_button"><a href="#">Join Now</a></div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 
 		<!-- Gallery -->
@@ -473,9 +470,6 @@
 							<li><i class="fa fa-check" aria-hidden="true"></i> Thousands of successful transformations
 							</li>
 						</ul>
-						<div class="ladies_note"><small>*Programs adapted for safety and comfort; consult with our team
-								for
-								medical guidance.</small></div>
 					</div>
 				</div>
 			</div>
@@ -493,7 +487,7 @@
 					<div class="col">
 						<div class=" d-flex flex-row align-items-start justify-content-start">
 							<div class="section_title_container">
-								<div class="section_subtitle">welcome to sportfit</div>
+								<div class="section_subtitle">welcome to fitgirls</div>
 								<div class="section_title">Program Structure</div>
 							</div>
 							<!-- <div class="all_posts_link ml-auto"><a href="#">View all blog posts</a></div> -->
@@ -507,10 +501,11 @@
 						<div class="blog_post">
 							<div class="blog_post_image"><img src="images/blog_1.jpg" alt=""></div>
 							<div class="blog_post_title"><a href="#">Workouts</a></div>
-							<div class="blog_post_date"><a href="#">Live Workout Timings (IST)</a></div>
+							<!-- <div class="blog_post_date"><a href="#">Live Workout Timings (IST)</a></div> -->
 							<div class="blog_post_text">
 								<p>3 Live Online Sessions Daily via Zoom App<br>
 								24-hour Recorded Workout Access</p> <br>
+								<div class="blog_post_date"><a href="#">Live Workout Timings (IST)</a></div>
 								<ul>
 									<li>Morning 10:30</li>
 									<li>Evening 5:00</li>
@@ -526,12 +521,11 @@
 						<div class="blog_post">
 							<div class="blog_post_image"><img src="images/blog_2.jpg" alt=""></div>
 							<div class="blog_post_title"><a href="#">Training Formats</a></div>
-							<div class="blog_post_date"><a href="#">Pre Recorded Contents</a></div>
+							<!-- <div class="blog_post_date"><a href="#">Pre Recorded Contents</a></div> -->
 							<div class="blog_post_text">
 								<ul>
 									<li>• Cardio</li>
 									<li>• Aerobics</li>
-									<li>• Weight Training</li>
 									<li>• Zumba</li>
 									<li>• Weight Training</li>
 									<li>• Face Yoga</li>
@@ -546,7 +540,7 @@
 						<div class="blog_post">
 							<div class="blog_post_image"><img src="images/blog_3.jpg" alt=""></div>
 							<div class="blog_post_title"><a href="#">Lifestyle Support</a></div>
-							<div class="blog_post_date"><a href="#">june 29, 2018</a></div>
+							<!-- <div class="blog_post_date"><a href="#">june 29, 2018</a></div> -->
 							<div class="blog_post_text">
 								<ul>
 									<li>• Homely diet plans based on health condition</li>
@@ -564,13 +558,13 @@
 		</div>
 
 		<!-- Services -->
-		<div class="services">
+		<div class="services mb-5">
 			<div class="container">
 				<div class="row">
 					<div class="col">
 						<div class="section_title_container">
-							<div class="section_subtitle">welcome to sportfit</div>
-							<div class="section_title">Our Courses</div>
+							<!-- <div class="section_subtitle">welcome to sportfit</div> -->
+							<div class="section_title">Dietary support</div>
 						</div>
 					</div>
 				</div>
@@ -582,13 +576,12 @@
 							<div
 								class="service_title_container d-flex flex-row align-items-center justify-content-start">
 								<div>
-									<div class="service_icon"><img src="images/icon_4.png" alt=""></div>
+									<div class="service_icon"><img src="images/icon_8.png" alt=""></div>
 								</div>
-								<div class="service_title">Weight Loss Class</div>
+								<div class="service_title">Homely food</div>
 							</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem
-									maximus mauris scelerisque, at rutrum.</p>
+								<p>Condition-specific, balanced Indian diet guidance (PCOS, obesity, thyroid & lifestyle disorders).</p>
 							</div>
 						</div>
 					</div>
@@ -601,28 +594,10 @@
 								<div>
 									<div class="service_icon"><img src="images/icon_5.png" alt=""></div>
 								</div>
-								<div class="service_title">Yoga Classes</div>
+								<div class="service_title">No starvation</div>
 							</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem
-									maximus mauris scelerisque, at rutrum.</p>
-							</div>
-						</div>
-					</div>
-
-					<!-- Service -->
-					<div class="col-xl-4 col-md-6 service_col">
-						<div class="service">
-							<div
-								class="service_title_container d-flex flex-row align-items-center justify-content-start">
-								<div>
-									<div class="service_icon"><img src="images/icon_6.png" alt=""></div>
-								</div>
-								<div class="service_title">Spinning Class</div>
-							</div>
-							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem
-									maximus mauris scelerisque, at rutrum.</p>
+								<p>Focus on portion control, meal timing & sustainability — no crash diets.</p>
 							</div>
 						</div>
 					</div>
@@ -635,11 +610,10 @@
 								<div>
 									<div class="service_icon"><img src="images/icon_7.png" alt=""></div>
 								</div>
-								<div class="service_title">Private Fit Class</div>
+								<div class="service_title">No supplements</div>
 							</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem
-									maximus mauris scelerisque, at rutrum.</p>
+								<p>No supplements or medication advice — lifestyle support only.</p>
 							</div>
 						</div>
 					</div>
@@ -650,34 +624,15 @@
 							<div
 								class="service_title_container d-flex flex-row align-items-center justify-content-start">
 								<div>
-									<div class="service_icon"><img src="images/icon_8.png" alt=""></div>
+									<div class="service_icon"><img src="images/icon_12.png" alt=""></div>
 								</div>
-								<div class="service_title">Nutrition Classes</div>
+								<div class="service_title">Balanced meals</div>
 							</div>
 							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem
-									maximus mauris scelerisque, at rutrum.</p>
+								<p>Anti-inflammatory, gut-friendly food approach for long-term health.</p>
 							</div>
 						</div>
 					</div>
-
-					<!-- Service -->
-					<div class="col-xl-4 col-md-6 service_col">
-						<div class="service">
-							<div
-								class="service_title_container d-flex flex-row align-items-center justify-content-start">
-								<div>
-									<div class="service_icon"><img src="images/icon_9.png" alt=""></div>
-								</div>
-								<div class="service_title">Pillates Class</div>
-							</div>
-							<div class="service_text">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem
-									maximus mauris scelerisque, at rutrum.</p>
-							</div>
-						</div>
-					</div>
-
 				</div>
 			</div>
 		</div>
@@ -687,24 +642,24 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-10">
+					<div class="col-lg-12">
 						<div class="footer_container">
 							<div class="footer_content">
 								<div class="footer_logo">
 									<a href="#">
-										<div class="logo d-flex flex-row align-items-center justify-content-center"><img
-												src="images/dot.png" alt="">
-											<div>Fit<span>Girls</span></div>
+										<div class="logo d-flex flex-row align-items-center justify-content-center"><img style="width: 230px; height: auto;"
+												src="images/fitgirls-logo-bg.png" alt="">
+											<!-- <div>Fit<span>Girls</span></div> -->
 										</div>
 									</a>
 								</div>
 								<div class="footer_row">
-									<div class="footer_about">
+									<div class="col-lg-6 footer_about">
 										<h4>About Us</h4>
 										<p>FitGirls is a women-only online fitness platform providing structured workouts and guided nutrition practices. Programs are led by certified female trainers and dieticians focused on safety, comfort and long-term results.</p>
 									</div>
 									<!-- Contact & Socials -->
-									<div class="footer_contact">
+									<div class="col-lg-6 footer_contact">
 										<div class="footer_phones">Contact :
 											<a href="tel:+918111924903">+91 8111924903</a>
 											<span class="sep">&nbsp;|&nbsp;</span>
@@ -718,22 +673,13 @@
 										</div>
 									</div>
 								</div>
-								<div class="newsletter_container">
+								<!-- <div class="newsletter_container">
 									<form action="#" id="newsletter_form" class="newsletter_form">
 										<input type="text" class="newsletter_input" placeholder="Enter your email here"
 											required="required">
 										<button class="newsletter_button">go</button>
 									</form>
-								</div>
-								<div
-									class="copyright d-flex flex-row align-items-start justify-content-sm-end justify-content-center">
-									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-									Copyright &copy;
-									<script>document.write(new Date().getFullYear());</script> All rights reserved |
-									This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-										href="https://colorlib.com" target="_blank">Colorlib</a>
-									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								</div>
+								</div> -->
 							</div>
 							<!-- <div class="footer_image text-center"><img src="images/footer.png" alt=""></div> -->
 						</div>
