--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					<div class="col">
 						<div class="header_content d-flex flex-row align-items-center justify-content-start trans_400">
 							<a href="#">
-								<div class="logo d-flex flex-row align-items-center justify-content-start"><img style="width: 200px;"
-										src="images/fitgirls-logo-bg.png" alt="">
+								<div class="logo d-flex flex-row align-items-center justify-content-start"><img
+										style="width: 125px;" src="images/fitgirl-logo.png" alt="">
 									<!-- <div>Fit<span>Girls</span></div> -->
 								</div>
 							</a>
@@ -76,10 +76,10 @@
 			<div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About us</a></li>
+					<!-- <li><a href="about.html">About us</a></li>
 					<li><a href="services.html">Classes & Services</a></li>
 					<li><a href="blog.html">Blog</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li> -->
 				</ul>
 			</div>
 			<div class="menu_phone d-flex flex-row align-items-center justify-content-start">
@@ -91,7 +91,7 @@
 		<!-- Home -->
 
 		<div class="home">
-			<div class="background_image" style="background-image:url(images/index.jpg)"></div>
+			<div class="background_image" style="background-image:url(images/index1.png)"></div>
 			<div class="overlay"></div>
 			<div class="home_container">
 				<div class="container">
@@ -99,17 +99,11 @@
 						<div class="col">
 							<div class="home_content text-center">
 								<div class="video_link">
-									<a class="vimeo video_button d-flex flex-column align-items-center justify-content-center"
-										href="https://player.vimeo.com/video/99340873?autoplay=1&loop=1&title=0&autopause=0">
-										<div
-											class="video_link_content d-flex flex-row align-items-center justify-content-start">
-											<div
-												class="video_icon d-flex flex-column align-items-center justify-content-center">
-												<i class="fa fa-play" aria-hidden="true"></i>
-											</div>
-											<span class="video_text">FitGirls</span>
+									<div class="video_link_content d-flex flex-row align-items-start justify-content-start">
+										<div>
+											<img width="200px" src="/images/fitgirl-logo.png" alt="">
 										</div>
-									</a>
+									</div>
 								</div>
 								<div class="home_title">Sweat Like A Girl</div>
 								<div class="home_subtitle">Online Fitness Platform For Ladies</div>
@@ -217,7 +211,7 @@
 
 		<div class="testimonials">
 			<div class="parallax_background parallax-window" data-parallax="scroll"
-				data-image-src="images/testimonials.jpg" data-speed="0.8"></div>
+				data-image-src="images/testimonials1.png" data-speed="0.8"></div>
 			<!-- <div class="container">
 				<div class="row">
 					<div class="col-lg-6">
@@ -298,19 +292,25 @@
 				<div class="owl-carousel owl-theme gallery_slider">
 
 					<!-- Slide -->
-					<div class="owl-item"><img src="images/gallery_3.jpg" alt=""></div>
+					<div class="owl-item"><img src="images/review/review1.jpeg" alt=""></div>
 
 					<!-- Slide -->
-					<div class="owl-item"><img src="images/gallery_4.jpg" alt=""></div>
+					<div class="owl-item"><img src="images/review/review2.jpeg" alt=""></div>
 
 					<!-- Slide -->
-					<div class="owl-item"><img src="images/gallery_5.jpg" alt=""></div>
+					<div class="owl-item"><img src="images/review/review3.jpeg" alt=""></div>
 
 					<!-- Slide -->
-					<div class="owl-item"><img src="images/gallery_1.jpg" alt=""></div>
+					<div class="owl-item"><img src="images/review/review4.jpeg" alt=""></div>
 
 					<!-- Slide -->
-					<div class="owl-item"><img src="images/gallery_2.jpg" alt=""></div>
+					<div class="owl-item"><img src="images/review/review5.jpeg" alt=""></div>
+
+					<!-- Slide -->
+					<div class="owl-item"><img src="images/review/review6.jpeg" alt=""></div>
+
+					<!-- Slide -->
+					<div class="owl-item"><img src="images/review/review7.jpeg" alt=""></div>
 
 				</div>
 			</div>
@@ -480,7 +480,7 @@
 
 		<div class="blog">
 			<div class="blog_overlay"></div>
-			<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/blog.jpg"
+			<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/blog2.png"
 				data-speed="0.8"></div>
 			<div class="container">
 				<div class="row">
@@ -499,12 +499,12 @@
 					<!-- Blog Post -->
 					<div class="col-lg-4 blog_col">
 						<div class="blog_post">
-							<div class="blog_post_image"><img src="images/blog_1.jpg" alt=""></div>
+							<div class="blog_post_image"><img src="images/blog_11.png" alt=""></div>
 							<div class="blog_post_title"><a href="#">Workouts</a></div>
 							<!-- <div class="blog_post_date"><a href="#">Live Workout Timings (IST)</a></div> -->
 							<div class="blog_post_text">
 								<p>3 Live Online Sessions Daily via Zoom App<br>
-								24-hour Recorded Workout Access</p> <br>
+									24-hour Recorded Workout Access</p> <br>
 								<div class="blog_post_date"><a href="#">Live Workout Timings (IST)</a></div>
 								<ul>
 									<li>Morning 10:30</li>
@@ -519,7 +519,7 @@
 					<!-- Blog Post -->
 					<div class="col-lg-4 blog_col">
 						<div class="blog_post">
-							<div class="blog_post_image"><img src="images/blog_2.jpg" alt=""></div>
+							<div class="blog_post_image"><img src="images/blog22.png" alt=""></div>
 							<div class="blog_post_title"><a href="#">Training Formats</a></div>
 							<!-- <div class="blog_post_date"><a href="#">Pre Recorded Contents</a></div> -->
 							<div class="blog_post_text">
@@ -538,7 +538,7 @@
 					<!-- Blog Post -->
 					<div class="col-lg-4 blog_col">
 						<div class="blog_post">
-							<div class="blog_post_image"><img src="images/blog_3.jpg" alt=""></div>
+							<div class="blog_post_image"><img src="images/blog33.png" alt=""></div>
 							<div class="blog_post_title"><a href="#">Lifestyle Support</a></div>
 							<!-- <div class="blog_post_date"><a href="#">june 29, 2018</a></div> -->
 							<div class="blog_post_text">
@@ -581,7 +581,8 @@
 								<div class="service_title">Homely food</div>
 							</div>
 							<div class="service_text">
-								<p>Condition-specific, balanced Indian diet guidance (PCOS, obesity, thyroid & lifestyle disorders).</p>
+								<p>Condition-specific, balanced Indian diet guidance (PCOS, obesity, thyroid & lifestyle
+									disorders).</p>
 							</div>
 						</div>
 					</div>
@@ -647,8 +648,9 @@
 							<div class="footer_content">
 								<div class="footer_logo">
 									<a href="#">
-										<div class="logo d-flex flex-row align-items-center justify-content-center"><img style="width: 230px; height: auto;"
-												src="images/fitgirls-logo-bg.png" alt="">
+										<div class="logo d-flex flex-row align-items-center justify-content-center"><img
+												style="width: 230px; height: auto;" src="images/fitgirl-logo.png"
+												alt="">
 											<!-- <div>Fit<span>Girls</span></div> -->
 										</div>
 									</a>
@@ -656,7 +658,10 @@
 								<div class="footer_row">
 									<div class="col-lg-6 footer_about">
 										<h4>About Us</h4>
-										<p>FitGirls is a women-only online fitness platform providing structured workouts and guided nutrition practices. Programs are led by certified female trainers and dieticians focused on safety, comfort and long-term results.</p>
+										<p>FitGirls is a women-only online fitness platform providing structured
+											workouts and guided nutrition practices. Programs are led by certified
+											female trainers and dieticians focused on safety, comfort and long-term
+											results.</p>
 									</div>
 									<!-- Contact & Socials -->
 									<div class="col-lg-6 footer_contact">
@@ -666,10 +671,16 @@
 											<a href="tel:+918590970307">+91 8590970307</a>
 										</div>
 										<div class="footer_socials">Follow us:
-											<a href="https://www.instagram.com/fit_girls.in?igsh=MXQ0M2J1MTZiYWdydw==" target="_blank" aria-label="Instagram"><i class="fa fa-instagram"></i></a>
-											<a href="https://www.facebook.com/share/1RyzLufiaw/" target="_blank" aria-label="Facebook"><i class="fa fa-facebook"></i></a>
-											<a href="https://youtube.com/@fitgirls-kb9qs?si=0fyfkU1xi5JkHoo6" target="_blank" aria-label="YouTube"><i class="fa fa-youtube-play"></i></a>
-											<a href="https://chat.whatsapp.com/CGYDqaF8Y4B6e4cBb0gZSh" target="_blank" aria-label="WhatsApp"><i class="fa fa-whatsapp"></i></a>
+											<a href="https://www.instagram.com/fit_girls.in?igsh=MXQ0M2J1MTZiYWdydw=="
+												target="_blank" aria-label="Instagram"><i
+													class="fa fa-instagram"></i></a>
+											<a href="https://www.facebook.com/share/1RyzLufiaw/" target="_blank"
+												aria-label="Facebook"><i class="fa fa-facebook"></i></a>
+											<a href="https://youtube.com/@fitgirls-kb9qs?si=0fyfkU1xi5JkHoo6"
+												target="_blank" aria-label="YouTube"><i
+													class="fa fa-youtube-play"></i></a>
+											<a href="https://chat.whatsapp.com/CGYDqaF8Y4B6e4cBb0gZSh" target="_blank"
+												aria-label="WhatsApp"><i class="fa fa-whatsapp"></i></a>
 										</div>
 									</div>
 								</div>
