fix: footer changes

--- a/index.html
+++ b/index.html
@@ -638,61 +638,128 @@
 			</div>
 		</div>
 
+		<!-- Program Fees Section -->
+		<section class="program_fees_section">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="section_title_container">
+							<!-- <div class="section_subtitle">welcome to sportfit</div> -->
+							<div class="section_title">Program Fees</div>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-5">
+					<!-- Main Package -->
+					<div class="col-lg-6 col-md-12 mb-4">
+						<div class="fees_card">
+							<div class="fees_card_header">
+								<div class="fees_amount">₹999</div>
+							</div>
+							<div class="fees_card_body">
+								<div class="fees_duration">35 Days</div>
+								<div class="fees_package_type">Full Program</div>
+								<ul class="fees_features">
+									<li>✓ Complete 35-day program</li>
+									<li>✓ Personalized nutrition plan</li>
+									<li>✓ Fitness guidance</li>
+									<li>✓ Expert support</li>
+								</ul>
+								<button class="fees_btn">Get Started</button>
+							</div>
+						</div>
+					</div>
+					<!-- Trial Package -->
+					<div class="col-lg-6 col-md-12 mb-4">
+						<div class="fees_card trial">
+							<div class="fees_card_header trial">
+								<div class="trial_badge">TRIAL</div>
+								<div class="fees_amount">₹300</div>
+							</div>
+							<div class="fees_card_body">
+								<div class="fees_duration">1 Week</div>
+								<div class="fees_package_type">Trial Package</div>
+								<ul class="fees_features">
+									<li>✓ 1-week trial access</li>
+									<li>✓ Basic nutrition guidance</li>
+									<li>✓ Fitness introduction</li>
+									<li>✓ Upgrade anytime</li>
+								</ul>
+								<button class="fees_btn trial">Start Trial</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
 		<!-- Footer -->
 
 		<footer class="footer">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="footer_container">
-							<div class="footer_content">
+				<div class="footer_top_section">
+					<div class="row">
+						<!-- Logo Section -->
+						<div class="col-lg-4 col-md-6 col-sm-12 footer_column">
+							<div class="footer_logo_section">
 								<div class="footer_logo">
 									<a href="#">
-										<div class="logo d-flex flex-row align-items-center justify-content-center"><img
-												style="width: 230px; height: auto;" src="images/fitgirl-logo.png"
-												alt="">
-											<!-- <div>Fit<span>Girls</span></div> -->
-										</div>
+										<img style="width: 175px;" src="images/fitgirl-logo.png" alt="FitGirls Logo">
 									</a>
 								</div>
-								<div class="footer_row">
-									<div class="col-lg-6 footer_about">
-										<h4>About Us</h4>
-										<p>FitGirls is a women-only online fitness platform providing structured
-											workouts and guided nutrition practices. Programs are led by certified
-											female trainers and dieticians focused on safety, comfort and long-term
-											results.</p>
-									</div>
-									<!-- Contact & Socials -->
-									<div class="col-lg-6 footer_contact">
-										<div class="footer_phones">Contact :
+								<p class="footer_tagline">Empowering women through fitness and wellness</p>
+							</div>
+						</div>
+
+						<!-- About Section -->
+						<div class="col-lg-4 col-md-6 col-sm-12 footer_column">
+							<div class="footer_section">
+								<h4 class="footer_section_title">About Us</h4>
+								<p class="footer_text">FitGirls is a women-only online fitness platform providing structured workouts and guided nutrition practices. Programs are led by certified female trainers and dieticians.</p>
+							</div>
+						</div>
+
+						<!-- Contact & Socials Section -->
+						<div class="col-lg-4 col-md-6 col-sm-12 footer_column">
+							<div class="footer_section">
+								<h4 class="footer_section_title">Get In Touch</h4>
+								<div class="footer_contact_info">
+									<div class="contact_item">
+										<strong>Phone:</strong>
+										<div class="contact_links">
 											<a href="tel:+918111924903">+91 8111924903</a>
-											<span class="sep">&nbsp;|&nbsp;</span>
 											<a href="tel:+918590970307">+91 8590970307</a>
 										</div>
-										<div class="footer_socials">Follow us:
-											<a href="https://www.instagram.com/fit_girls.in?igsh=MXQ0M2J1MTZiYWdydw=="
-												target="_blank" aria-label="Instagram"><i
-													class="fa fa-instagram"></i></a>
-											<a href="https://www.facebook.com/share/1RyzLufiaw/" target="_blank"
-												aria-label="Facebook"><i class="fa fa-facebook"></i></a>
-											<a href="https://youtube.com/@fitgirls-kb9qs?si=0fyfkU1xi5JkHoo6"
-												target="_blank" aria-label="YouTube"><i
-													class="fa fa-youtube-play"></i></a>
-											<a href="https://chat.whatsapp.com/CGYDqaF8Y4B6e4cBb0gZSh" target="_blank"
-												aria-label="WhatsApp"><i class="fa fa-whatsapp"></i></a>
+									</div>
+									<div class="footer_social_links">
+										<strong>Follow Us:</strong>
+										<div class="social_icons">
+											<a href="https://www.instagram.com/fit_girls.in?igsh=MXQ0M2J1MTZiYWdydw==" target="_blank" aria-label="Instagram" class="social_icon">
+												<i class="fa fa-instagram"></i>
+											</a>
+											<a href="https://www.facebook.com/share/1RyzLufiaw/" target="_blank" aria-label="Facebook" class="social_icon">
+												<i class="fa fa-facebook"></i>
+											</a>
+											<a href="https://youtube.com/@fitgirls-kb9qs?si=0fyfkU1xi5JkHoo6" target="_blank" aria-label="YouTube" class="social_icon">
+												<i class="fa fa-youtube-play"></i>
+											</a>
+											<a href="https://chat.whatsapp.com/CGYDqaF8Y4B6e4cBb0gZSh" target="_blank" aria-label="WhatsApp" class="social_icon">
+												<i class="fa fa-whatsapp"></i>
+											</a>
 										</div>
 									</div>
 								</div>
-								<!-- <div class="newsletter_container">
-									<form action="#" id="newsletter_form" class="newsletter_form">
-										<input type="text" class="newsletter_input" placeholder="Enter your email here"
-											required="required">
-										<button class="newsletter_button">go</button>
-									</form>
-								</div> -->
 							</div>
-							<!-- <div class="footer_image text-center"><img src="images/footer.png" alt=""></div> -->
+						</div>
+					</div>
+				</div>
+
+				<!-- Footer Bottom -->
+				<div class="footer_bottom_section">
+					<div class="row">
+						<div class="col-lg-12">
+							<div class="footer_divider"></div>
+							<p class="footer_copyright">&copy; 2025 FitGirls. All Rights Reserved. | Women's Fitness & Wellness Platform</p>
 						</div>
 					</div>
 				</div>
