--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								</div>
 								<div class="home_title">Sweat Like A Girl</div>
 								<div class="home_subtitle">Online Fitness Platform For Ladies</div>
-								<div class="button home_button ml-auto mr-auto"><a href="#">Join Now</a></div>
+								<div class="button home_button ml-auto mr-auto"><a href="https://wa.me/918111924903" target="_blank">Join Now</a></div>
 							</div>
 						</div>
 					</div>
@@ -191,7 +191,7 @@
 									Programs are handled by certified lady trainers and certified dieticians, ensuring
 									safety, comfort, and adherence.</p>
 							</div>
-							<div class="button about_button"><a href="#">Join Now</a></div>
+							<div class="button about_button"><a href="https://wa.me/918111924903" target="_blank">Join Now</a></div>
 						</div>
 					</div>
 				</div>
@@ -665,7 +665,7 @@
 									<li>✓ Fitness guidance</li>
 									<li>✓ Expert support</li>
 								</ul>
-								<button class="fees_btn">Get Started</button>
+								<button class="fees_btn"><a href="https://wa.me/918111924903" target="_blank">Get Started</a></button>
 							</div>
 						</div>
 					</div>
@@ -685,7 +685,7 @@
 									<li>✓ Fitness introduction</li>
 									<li>✓ Upgrade anytime</li>
 								</ul>
-								<button class="fees_btn trial">Start Trial</button>
+								<button class="fees_btn trial"><a href="https://wa.me/918111924903" target="_blank">Start Trial</a></button>
 							</div>
 						</div>
 					</div>
@@ -745,6 +745,9 @@
 											</a>
 											<a href="https://chat.whatsapp.com/CGYDqaF8Y4B6e4cBb0gZSh" target="_blank" aria-label="WhatsApp" class="social_icon">
 												<i class="fa fa-whatsapp"></i>
+											</a>
+											<a href="mailto:teamfitgirlsindia@gmail.com" target="_blank" aria-label="Gmail" class="social_icon">
+												<i class="fa fa-envelope"></i>
 											</a>
 										</div>
 									</div>
