--- a/index.html
+++ b/index.html
@@ -725,6 +725,10 @@
 								<h4 class="footer_section_title">Get In Touch</h4>
 								<div class="footer_contact_info">
 									<div class="contact_item">
+										<strong>Address:</strong>
+										<p class="footer_text" style="margin-top: 4px;">Kavungal House, Perimbalam Road<br>Anakkayam, Malappuram, Kerala, 676509</p>
+									</div>
+									<div class="contact_item" style="margin-top: 4px;">
 										<strong>Phone:</strong>
 										<div class="contact_links">
 											<a href="tel:+918590970307">+91 8590970307</a>
